--- a/src/components/menus/shop-product-cart-2/index.html
+++ b/src/components/menus/shop-product-cart-2/index.html
@@ -1,10 +1,10 @@
 <a href="/pages/product.html" class="product-rect-content">
 
     <div class="prc-title">
-        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A alias autem dolore dolorem, dolores earum, esse ipsam minima molestiae, officiis quidem sequi similique tenetur. Consequuntur culpa dolores eaque iste quo!</span>
+        <span>Kişiye özel Kupa Bardak baskı hizmeti Joly Dijital, dijital baskı çözümleri, reklam ve promosyon</span>
     </div>
     <div class="prc-image">
-        <img src="/images/product-1.jpeg" alt="">
+        <img src="/images/product1.jpg" alt="">
     </div>
     <div class="flex items-center leading-3 justify-center mb-1">
 
