--- a/src/components/orders/orders.html
+++ b/src/components/orders/orders.html
@@ -16,7 +16,7 @@
             <span>Tutar</span>
             <b class="!text-primary-500">213.99 TL</b>
         </div>
-        <button class="btn_ btn_full btn_primary btn_sm ">Detaylar</button>
+        <a href="/pages/orders-details.html" class="btn_ btn_full btn_primary btn_sm ">Detaylar</a>
     </div>
     <div class="opl-item-main">
         <ul class="opli-product-lists">
