--- a/src/components/breadcrumb/index.html
+++ b/src/components/breadcrumb/index.html
@@ -9,7 +9,7 @@
       <div class="dbc-item-content">
         <i class="gg-chevron-right" style="--ggs: .7;"> </i>
         <a href="#" class="dbc-item-text">
-          Kategori
+          Hediyelik Ürünler
         </a>
       </div>
     </li>
@@ -17,7 +17,7 @@
       <div class="dbc-item-content">
         <i class="gg-chevron-right" style="--ggs: .7;"> </i>
         <span href="#" class="dbc-item-text">
-          Parfüm
+          Kişiye Özel Kupa
         </span>
       </div>
     </li>
