--- a/src/components/sliders/products-slider/index.html
+++ b/src/components/sliders/products-slider/index.html
@@ -1,7 +1,7 @@
 <div class="swiper" data-slider-products>
     <div class="swiper-wrapper">
         <div class="swiper-slide">
-            <a href="#" class="product-rect-content procut-rect-image">
+            <a href="#" class="product-rect-content product-rect-image">
                 <img src="https://images.hepsiburada.net/banners/s/0/224-371/homepageImage2177_20231031174304.png/format:webp" alt="">
             </a>
         </div>
